[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/unit.gd" type="Script" id=1]

[node name="unit" type="Area2D"]
script = ExtResource( 1 )

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="CollisionPolygon" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )

[node name="Polygon" type="Polygon2D" parent="."]
visible = false
polygon = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0 )

[connection signal="input_event" from="." to="." method="_on_unit_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_unit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_unit_mouse_exited"]
